<resources>
    <string name="app_name">PjatkShoppingList</string>
    <string name="add_button">Add</string>
    <string name="options_button">Options</string>
    <string name="save_button">Save</string>
    <string name="back_button">Back</string>
    <string name="delete_item_message">Are you sure you want to delete this item?</string>
    <string name="delete_item_message_confirmation">Yes</string>
    <string name="delete_item_message_denial">No</string>
    <string name="product_name">Product name</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="product">"Product "</string>
    <string name="add_activity_added">" was added"</string>
    <string name="product_remove">Product has been removed</string>
    <string name="black">Black</string>
    <string name="red">Red</string>
    <string name="purple">Purple</string>
    <string name="green">Green</string>
    <string name="font_size">Font Size</string>
    <string name="font_color">Font Color</string>
    <string name="size">Size</string>
    <string name="text_size_toast">Please enter value between 10 and 64</string>
    <string name="empty_font_size_toast">Please enter font size value</string>
    <string name="toast_add_error">Please fill in all the fields</string>
    <string name="add_product_intent" translatable="false">com.example.pjatkshoppinglist.ADD_PRODUCT</string>
    <string name="shops">Shops</string>
    <string name="title_activity_maps">Map</string>
    <string name="map">Map</string>
    <string name="shop_name">Shop name</string>
    <string name="description">Description</string>
    <string name="radius">Radius</string>
    <string name="shop_removed">Shop has been removed</string>
    <string name="appwidget_text" translatable="false">EXAMPLE</string>
    <string name="add_widget" translatable="false">Add widget</string>
    <string name="pjatk_shopping_list_app">PJATK Shopping List App</string>
    <string name="image_pressed" translatable="false">com.example.pjatkshoppinglist.activity.IMAGE_PRESSED</string>
    <string name="button_stop" translatable="false">com.example.pjatkshoppinglist.activity.BUTTON_STOP</string>
    <string name="button_pause" translatable="false">com.example.pjatkshoppinglist.activity.BUTTON_PAUSE</string>
    <string name="button_play" translatable="false">com.example.pjatkshoppinglist.activity.BUTTON_PLAY</string>
    <string name="button_next" translatable="false">com.example.pjatkshoppinglist.activity.BUTTON_NEXT</string>

</resources>